--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,9 +1,8 @@
 <h2>Tweets</h2>
-
-    <% if @tweets %>
-      <% @tweets.each do |tweet| %>
+    <% if Tweet.count > 0 %>
+      <% Tweet.all.each do |tweet| %>
         <div class="tweet">
-          <h4><a href="/tweets/<%= @tweet.id %>"> <%= tweet.content %></a></h4><br>
-        </div><br>
+          <h4><a href="/tweets/<%= tweet.id %>"> <%= tweet.content %></a></h4>
+        </div>
       <% end %>
     <% end %>
