--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -2,6 +2,6 @@
 
 <form action="/tweets" method="POST">
   <label>Tweet</label>
-  <input type="text" name="tweet[content]" id="tweet_text">
+  <input type="text" name="content" id="tweet_text">
   <input type="submit" value="Create New Tweet">
 </form>
