--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,5 +10,14 @@
       <%= yield %>
     </div>
 
+
+    <!--
+    <p>
+      <form action="/logout" method="post">
+        <input id="hidden" type="hidden" name="_method" value="delete">
+        <input type="submit" value="Delete Tweet">
+      </form>
+    </p>
+  -->
   </body>
 </html>
