--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -2,6 +2,6 @@
 
 <form action="/tweets/<%= @tweet.id %>" method="POST">
   <label>Tweet</label>
-  <input type="text" name="tweet[content]" id="tweet_text" value="<%=@tweet.content%>">
+  <input type="text" name="content" id="tweet_text" value="<%=@tweet.content%>">
   <input type="submit" value="Edit Tweet">
 </form>
