--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 <h3>Login</h3>
 <form action="/login" method="POST">
-  <input type="text" name="user[username]" placeholder="Username:">
+  <input type="text" name="username" placeholder="Username:">
 <!--  <input type="text" name="user[email]" placeholder="Email:"> -->
-  <input type="password" name="user[password]" placeholder="Password:">
-  <input type="submit" value="Log In">
+  <input type="password" name="password" placeholder="Password:">
+  <input type="submit" value="submit">
 </form>
