--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -3,5 +3,5 @@
 <form action="/tweets" method="POST">
   <label>Tweet</label>
   <input type="text" name="content" id="tweet_text">
-  <input type="submit" value="Create New Tweet">
+  <input type="submit" value="submit">
 </form>
