--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,9 @@
-Show Users Tweets?
+<h1>Welcome, these are YOUR </h1>
+<h2>Tweets</h2>
+    <% if @tweets.count > 0 %>
+      <% @tweets.all.each do |tweet| %>
+        <div class="tweet">
+          <h4><a href="/tweets/<%= tweet.id %>"> <%= tweet.content %></a></h4>
+        </div>
+      <% end %>
+    <% end %>
