automatically backed up by learn

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,4 @@
-<h1>Welcome, these are YOUR </h1>
-<h2>Tweets</h2>
+<h2>Welcome, these are YOUR Tweets</h2>
     <% if @tweets.count > 0 %>
       <% @tweets.all.each do |tweet| %>
         <div class="tweet">
