--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,6 +1,7 @@
 <h1>Edit Tweet</h1>
 
 <form action="/tweets/<%= @tweet.id %>" method="POST">
+  <%= binding.pry %>
   <label>Tweet</label>
   <input type="text" name="content" id="tweet_text" value="<%=@tweet.content%>">
   <input type="submit" value="submit">
