--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,4 @@
-<h2>Tweets</h2>
+<h2>Welcome, to all of the Tweets</h2>
     <% if Tweet.count > 0 %>
       <% Tweet.all.each do |tweet| %>
         <div class="tweet">
